--- a/Hot.Demo/Hot.Demo.csproj
+++ b/Hot.Demo/Hot.Demo.csproj
@@ -29,6 +29,10 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <PackageReference Include="Lokad.ILPack" Version="0.2.0" />
+	</ItemGroup>
+
+	<ItemGroup>
 	  <ProjectReference Include="..\Hot\Hot.csproj" />
 	</ItemGroup>
 
